package org.example;

public enum EstadoFormacion {
    EN_DEPOSITO,
    DETENIDO,
    EN_MARCHA
}
