package org.example;

public abstract class Vagon {
    public abstract int calcularPesoMaximo();

    public int calcularMaximoPasajeros() {
        return 0;
    }
}
